Fixes visibility bug in safari.

--- a/frontend/src/sass/dashboard.sass
+++ b/frontend/src/sass/dashboard.sass
@@ -486,7 +486,7 @@ div.card
 
         span
           opacity: 0
-
+          display: inline-block
           @include transform(translateX(-25px))
           @include transition(color 0.2s, opacity 0.2s)
 
